[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://systems/main_menu/scripts/main_menu.gd" type="Script" id=2]
[ext_resource path="res://systems/main_menu/scripts/new_project.gd" type="Script" id=3]
[ext_resource path="res://systems/main_menu/scripts/open_project.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewProject" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -36.0
margin_right = 160.0
margin_bottom = 92.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NewProject"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="NewProject/VBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "<- back"

[node name="HBoxContainer" type="HBoxContainer" parent="NewProject/VBoxContainer"]
margin_top = 30.0
margin_right = 320.0
margin_bottom = 54.0
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewProject/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 158.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "name "

[node name="LineEdit" type="LineEdit" parent="NewProject/VBoxContainer/HBoxContainer"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="NewProject/VBoxContainer"]
margin_top = 66.0
margin_right = 320.0
margin_bottom = 86.0
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewProject/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 258.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "project path"

[node name="BrowseButton" type="Button" parent="NewProject/VBoxContainer/HBoxContainer2"]
margin_left = 262.0
margin_right = 320.0
margin_bottom = 20.0
text = "browse"

[node name="CreateButton" type="Button" parent="NewProject/VBoxContainer"]
margin_left = 134.0
margin_top = 102.0
margin_right = 186.0
margin_bottom = 122.0
size_flags_horizontal = 6
size_flags_vertical = 2
text = "create"

[node name="FileDialog" type="FileDialog" parent="NewProject"]
margin_left = -16.0
margin_top = -16.0
margin_right = 328.0
margin_bottom = 254.0
window_title = "Open a Directory"
mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="NewProject"]
margin_left = 80.0
margin_top = 54.0
margin_right = 232.0
margin_bottom = 94.0
window_title = "warning"

[node name="Label" type="Label" parent="NewProject/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
align = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -40.0
margin_right = 46.5
margin_bottom = 40.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewProjectButton" type="Button" parent="VBoxContainer"]
margin_right = 93.0
margin_bottom = 20.0
text = "new project"

[node name="OpenProjectButton" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 93.0
margin_bottom = 50.0
text = "open project"

[node name="DonateButton" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 93.0
margin_bottom = 80.0
text = "donate"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 192.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SocialMediaButton" type="Button" parent="HBoxContainer"]
margin_right = 49.0
margin_bottom = 20.0
text = "social"

[node name="HelpButton" type="Button" parent="HBoxContainer"]
margin_left = 69.0
margin_right = 109.0
margin_bottom = 20.0
text = "help"

[node name="OpenProject" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -60.0
margin_right = 67.0
margin_bottom = 140.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OpenProject"]
anchor_left = -0.216418
anchor_top = 0.2
anchor_right = 1.21642
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FileDialog" type="FileDialog" parent="OpenProject"]
margin_right = 394.0
margin_bottom = 330.0
window_title = "Open a Directory"
mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="OpenProject"]
margin_right = 58.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "<- back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Browse" type="Button" parent="OpenProject"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -58.0
margin_bottom = 20.0
text = "browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -71.0
margin_top = -14.0
text = "version 0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -156.0
margin_right = 162.0
margin_bottom = -99.0
custom_fonts/font = SubResource( 1 )
text = "World Designer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhatsNewButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.0
margin_top = -20.0
margin_right = 41.0
text = "what's new"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NewProject/VBoxContainer/BackButton" to="." method="_on_Button2_pressed"]
[connection signal="text_changed" from="NewProject/VBoxContainer/HBoxContainer/LineEdit" to="NewProject" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="NewProject/VBoxContainer/HBoxContainer2/BrowseButton" to="NewProject" method="_on_BrowseButton_pressed"]
[connection signal="pressed" from="NewProject/VBoxContainer/CreateButton" to="NewProject" method="_on_CreateButton_pressed"]
[connection signal="dir_selected" from="NewProject/FileDialog" to="NewProject" method="_on_FileDialog_dir_selected"]
[connection signal="pressed" from="VBoxContainer/NewProjectButton" to="." method="_on_NewProjectButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OpenProjectButton" to="." method="_on_OpenProjectButton_pressed"]
[connection signal="dir_selected" from="OpenProject/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="pressed" from="OpenProject/BackButton" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="OpenProject/Browse" to="OpenProject" method="_on_Browse_pressed"]
